--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "he": "^1.2.0",
     "luxon": "^3.5.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-hook-form": "^7.53.2"
   }
 }
