--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tanstack/router-plugin": "^1.81.9",
     "@types/he": "^1.2.3",
     "@types/luxon": "^3.4.2",
+    "@types/node": "^22.10.1",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.2",
